# vital-agent

./: .env.example  .gitignore  LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: live-evals.yml
docs/: demo-script.md  firebase-auth-setup.md
scripts/: deploy_agent_engine.py
src/vital/: api.py  calendar.py  config.py  graph.py  ingest.py  memory.py  metrics.py  planner.py  security.py  state.py  storage.py  supervisor.py
src/vital/agents/: activity_scout.py  people_connector.py  sleep_energy.py
tests/: test_api_security.py  test_ingest.py  test_people_tools.py  test_routing.py  test_sandbox_safety.py  test_storage.py  test_tools.py
vital-app/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
vital-app/docs/: accounts-and-keys.md  blog-posts.md
vital-app/tests/: conftest.py  test_activity_buddies.py  test_analysis_graph.py  test_api_security.py  test_feedback.py  test_firebase_auth.py  test_graph_state_access.py  test_guardrails.py  test_ingest.py  test_memory.py  test_panel_endpoints.py  test_people_tools.py  test_planner_hitl.py  test_postgres_compat.py  test_stream_content.py  test_supervisor.py  test_tools.py
vital-mobile/: .gitignore  App.jsx  README.md  app.json  package.json  pnpm-lock.yaml
vital-web/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
vital-web/app/: globals.css  layout.jsx  page.jsx
vital-web/tests/: auth.test.mjs  buddies.test.mjs  gate.test.mjs  guard.test.mjs  location.test.mjs  speech.test.mjs  stream.test.mjs  theme.test.mjs  threads.test.mjs
(+37 files in other folders)
