[project]
name = "vital"
version = "0.1.0"
description = "VITAL - multi-agent life copilot (Phase 0: Activity Scout)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-google-vertexai>=2.0",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.22", "ruff>=0.8"]
postgres = ["langgraph-checkpoint-postgres>=2.0", "psycopg[binary,pool]>=3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vital"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
